--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 	</properties>
 
 	<dependencies>
+		<!--核心组件-->
+		<dependency>
+			<groupId>cn.stylefeng.roses</groupId>
+			<artifactId>kernel-core</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 		<!--数据库驱动,可根据自己需要自行删减-->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -127,6 +133,7 @@
 			<artifactId>jjwt</artifactId>
 			<version>${jwt.version}</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -134,6 +141,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
@@ -152,5 +167,23 @@
 			</resource>
 		</resources>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>local</id>
+			<properties>
+				<spring.active>local</spring.active>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<spring.active>dev</spring.active>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
