1.配置文件基本写完 2.一些测试文件

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,7 +8,7 @@ spring:
     filters: wall,mergeStat
 
 # 多数据源情况的配置
-guns:
+myinfo:
   muti-datasource:
     open: false
     driver-class-name: com.mysql.cj.jdbc.Driver
