--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,14 @@
             <version>${kaptcha.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.7</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
