--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,6 +8,7 @@ spring:
     password: root
     filters: wall,mergeStat
 
+
 # 多数据源情况的配置
 myinfo:
   muti-datasource:
@@ -21,3 +22,10 @@ myinfo:
 #持久层目录
 persist:
     pack: com.personal.info.myInfoSystem.modular.system.entity
+
+###通过下面的配置启用所有的监控端点，默认情况下，这些端点是禁用的；加入这个配置。监控所有接口
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
