--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>myInfoSystem</name>
     <description>Demo project for Spring Boot</description>
 
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -173,10 +173,24 @@
             <version>1.3.7</version>
         </dependency>
 
+        <!--Springboot集成的tomcat来提供api-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
     <build>
+        <finalName>myInfoSystem</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
