--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--shiro依赖和缓存-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
